--- a/RentMate/templates/home_app_tenant/tenant-home.html
+++ b/RentMate/templates/home_app_tenant/tenant-home.html
@@ -69,7 +69,7 @@
                 </div>
             </div>
         </div>
-
+        <h1>Dashboard</h1>
         <!-- Dashboard Cards -->
         <div class="dashboard-cards">
             <div class="card">
@@ -95,11 +95,6 @@
             <div class="card">
                 <div class="card-label">Maintenance Requests</div>
                 <div class="card-title">{{ pending_count }} Pending</div>
-            </div>
-            <div class="card">
-                <div class="card-label">Lease Ends In</div>
-                <div class="card-title">{{lease_remaining}}</div>
-                <div class="card-subtitle">{{tenant.lease_end}}</div>
             </div>
         </div>
 
